--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,1 +1,18 @@
-@import "~bootstrap/scss/bootstrap";
+@import '~bootstrap/scss/functions';
+
+//: Custom variables
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/variables-dark';
+
+//: Custom maps
+$custom-colors: ();
+$theme-colors: map-merge($theme-colors, $custom-colors);
+@import '~bootstrap/scss/bootstrap';
+@include color-mode(dark) {
+}
+
+//: Own styles
+h1 {
+  // color: shift-color($own, 50%);
+  // color: color-contrast(#fff);
+}
